[package]
name = "twitter_clone"
version = "0.1.0"
authors = ["ali <github@alihong.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
sqlx = { version = "0.5.1", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid"] }
thiserror = "1.0.24"
tide = "0.16.0"
uuid = "0.8.2"
